Corrected root-config name

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,7 +15,7 @@
         "react": "https://cdn.jsdelivr.net/npm/react@16.13.0/umd/react.production.min.js",
         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.0/umd/react-dom.production.min.js",
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.2.1/lib/system/single-spa.min.js",
-        "@mf-demo/root-config": "//localhost:9000/mf-root-config.js",
+        "@mf-demo/root-config": "//localhost:9000/mf-demo-root-config.js",
         "@mf-demo/navbar": "//localhost:9001/mf-demo-navbar.js",
         "@mf-demo/employees": "//localhost:9002/mf-demo-employees.js",
         "rxjs": "https://cdn.jsdelivr.net/npm/@esm-bundle/rxjs/system/rxjs.min.js",
