--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,18 +7,15 @@
   <title>Microfrontend Demo</title>
   <meta name="importmap-type" content="systemjs-importmap" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <!-- <script type="systemjs-importmap" src="https://storage.googleapis.com/react.microfrontends.app/importmap.json"></script> -->
   <% if (isLocal) { %>
   <script type="systemjs-importmap">
     {
-      "imports": {        
-        "react": "https://cdn.jsdelivr.net/npm/react@16.13.0/umd/react.production.min.js",
-        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.0/umd/react-dom.production.min.js",
+      "imports": {
+        "react": "https://cdn.jsdelivr.net/npm/react@16.8.6/umd/react.production.min.js",
+        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.8.6/umd/react-dom.production.min.js",
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.3.0/lib/system/single-spa.min.js",
         "@mf-demo/root-config": "//localhost:9000/mf-demo-root-config.js",
         "@mf-demo/navbar": "//localhost:9001/mf-demo-navbar.js",
-        "@mf-demo/employees": "//localhost:9002/mf-demo-employees.js",
-        "@mf-demo/employee-details": "//localhost:4200/main.js",
         "rxjs": "https://cdn.jsdelivr.net/npm/@esm-bundle/rxjs/system/rxjs.min.js",
         "rxjs/operators": "https://cdn.jsdelivr.net/npm/@esm-bundle/rxjs/system/rxjs-operators.min.js"
       }
@@ -32,14 +29,8 @@
   <script src="https://cdn.jsdelivr.net/npm/systemjs/dist/extras/named-exports.min.js"></script>
 </head>
 <body>
-  <nav id="mf-navbar"></nav>
-  <div class="container-fluid mt-3">
-    <div class="row">
-      <div class="col-sm-12">
-        <div id="mf-content"></div>
-      </div>
-    </div>
-  </div>  
+  <div id="mf-navbar"></div>
+  <div id="mf-content"></div>
   <script>
     System.import('@mf-demo/root-config');
     // System.import('@mf-demo/styleguide');
